--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+paxrat (1.30.0-1.1) unstable; urgency=medium
+
+  * Non-maintainer upload.
+  * gbp
+
+ -- Alexsandr Kibal <ak@subgraph.com>  Sun, 23 Apr 2017 14:46:45 +0000
+
 paxrat (1.30) unstable; urgency=medium
 
   * Synced with upstream 
