--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,17 @@
-paxrat (1.31.0-1) UNRELEASED; urgency=medium
+paxrat (1.32.0-1) unstable; urgency=medium
+
+  * Synced paxrat.cong with upstream
+
+ -- David McKinney <mckinney@subgraph.com>  Tue, 14 Nov 2017 11:13:34 -0500
+
+
+paxrat (1.31.0-3) unstable; urgency=medium
 
   * Non-maintainer upload.
   * Updated to version 1.31.0 (adds PaX flags for TBL plugin-container)
   * Changed build rules to use "-buildmode=pie"
 
- -- David McKinney <mckinney@subgraph.com>  Thu, 08 Jun 2017 14:21:48 +0000
+ -- David McKinney <mckinney@subgraph.com>  Tue, 14 Nov 2017 11:12:53 -0500
 
 paxrat (1.30.0-1.1) unstable; urgency=medium
 
